fixing subtext alignment

--- a/packages/chart/src/scss/main.scss
+++ b/packages/chart/src/scss/main.scss
@@ -90,6 +90,10 @@
     margin-bottom: 20px;
   }
 
+  .section-subtext {
+    padding: 15px;
+  }
+
   .legend-container {
     background: #fff;
     width: 100%;
@@ -346,4 +350,3 @@
     margin: 0.25em;
   }
 }
-
